Refactor and more units